# TrenchRoot-SEG

./: .gitattributes  .gitignore  LICENSE  README.md  TrenchRoot-SEG.hdf5  model.py  predict.py  pyproject.toml  requirements.txt  test_data_augmentation.py  train.py
data/for_train/: .gitignore
modules/: __initialize.py  config.py  images.py  model.py  training.py
trench_profile_test_data/: .gitignore
