[project]
name = "TrenchRoot-SEG"
version = "1.5.0"
description = "[A deep learning-based phenotypic analysis of rice root distribution from field images"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coloredlogs>=15.0.1",
    "numpy>=2.3.5",
    "scikit-image>=0.25.2",
    "tensorflow>=2.20.0",
    "torch>=2.9.1",
]
